--- a/thank-you.html
+++ b/thank-you.html
@@ -64,7 +64,7 @@
               <p>we will give you a call to confirm the subjects you need within the bundle as they may vary from one student to another.</p><br/>
               <p>We will send out your package and expect payment on delivery</p>
 
-                        <h5>Phone: 09038356928</h5>
+                        <h5>Phone: 07084222364 or 08065106654</h5>
             </div>
 
         </div>
